Use letter-spacing for easier reading of Current Word and change var letter to userGuess for better readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.current-word__display {
+    letter-spacing: .5rem;
+}
+
 .guessed--letter {
     text-transform: uppercase;
     display: inline-block;
