--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     --color-dark-gray1: #777;
     --color-dark-gray2: #666;
 
-    --font-heading: 'Georgia', Times, Times New Roman, serif;
+    --font-heading: "Hannari", Times, Times New Roman, serif;
     --font-default: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
@@ -58,6 +58,7 @@ h2 {
 h1 {
     font-size: 5rem;
     font-weight: bold;
+    line-height: 1.2;
 }
 
 h2 {
@@ -65,7 +66,8 @@ h2 {
 }
 
 h3 {
-    height: 4rem;
+    /*height: 4rem;*/
+    padding: .5rem 1rem;
     background: var(--color-black);
     font-size: 2.2rem;
     color: var(--color-white);
@@ -75,7 +77,6 @@ h3 {
 }
 
 h3::before {
-    /*content: url("../images/heading-deco.png");*/
     content: '▲';
     display: inline-block;
     margin-right: 1rem;
@@ -91,37 +92,13 @@ section {
 .container {
     width: calc(100% - 6rem);
     max-width: 800px;
-    margin: 3rem auto 12rem;
-    padding: 5rem;
+    margin: 3rem auto;
+    padding: 3rem;
     background: url("../images/bg2.jpg") repeat;
     border: 3px solid var(--color-dark-gold);
     border-radius: .8rem;
     z-index: 10;
 }
-
-/*.message::before {*/
-/*    content: '';*/
-/*    display: inline-block;*/
-/*    width: 2.5rem;*/
-/*    height: 2.5rem;*/
-/*    margin-right: .6rem;*/
-/*    background-image: url(../images/information-circle.svg);*/
-/*    background-size: contain;*/
-/*    vertical-align: top;*/
-/*}*/
-
-/*.message::before {*/
-/*    content: 'i';*/
-/*    display: inline-block;*/
-/*    !*width: 2.5rem;*!*/
-/*    !*height: 2.5rem;*!*/
-/*    margin-right: .6rem;*/
-/*    padding: .6rem;*/
-/*    border-radius: 50%;*/
-/*    background-color: var(--color-red);*/
-/*    !*background-size: contain;*!*/
-/*    vertical-align: top;*/
-/*}*/
 
 .message-container {
     display: flex;
@@ -130,8 +107,8 @@ section {
 }
 
 .message-icon {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 3rem;
+    height: 3rem;
     margin-right: .6rem;
     fill: var(--color-red);
 }
@@ -208,7 +185,6 @@ footer {
     height: 233px;
     position: fixed;
     bottom: 0;
-    /*background: url("../images/bg1.jpg") repeat-x;*/
     color: var(--color-white);
 }
 
@@ -218,5 +194,14 @@ footer {
     /* width: 641px to 768px */
     html {
         font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px */
+    }
+
+    .container {
+        padding: 5rem;
+    }
+
+    .message-icon {
+        width: 2.5rem;
+        height: 2.5rem;
     }
 }
